--- a/src/css/Animations.css
+++ b/src/css/Animations.css
@@ -10,5 +10,12 @@
     100% { opacity: 1; }
   }
 
+.result-slide {
+  animation: resultSlide 2s;
+  margin-top: 25%; 
+}
 
-  
+@keyframes resultSlide {
+  0% {margin-top: 0%}
+  100% {margin-top: 25%;}
+}
